[Feature] Create a Book[entity] in the admin panel

--- a/templates/vesoul-edition/home.html.twig
+++ b/templates/vesoul-edition/home.html.twig
@@ -1,6 +1,9 @@
 {% extends 'base.html.twig' %}
 {% block body %}
 
-    <h1>HomePage</h1>
+    <h1>Vesoul edition</h1>
 
+    {% for book in books %}
+        <li>{{ book.title }}</li>
+    {% endfor %}
 {% endblock %}
